# omi-faq-bot

./: .gitignore  README.md  config.toml  main.py  model.toml  pyproject.toml  requirements.txt
cogs/: faq.py  indexing.py  issue_slash.py  update_doc.py
core/: bot.py  index_doc.py  indexer.py  llm.py  omi_docs_downloader.py  query_doc.py
data/: faq.json
test/: indexer_test.py  llm_issolation.py
view/modal/: issue_modal.py
