[project]
name = "omi-faq-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "black>=25.9.0",
    "discord-py==2.6.3",
    "frontmatter==3.0.8",
    "google-genai==1.39.1",
    "joblib==1.5.2",
    "openai==2.0.0",
    "pynacl==1.6.0",
    "python-dotenv==1.1.1",
    "pyyaml==5.1",
    "rich==14.1.0",
    "sentence-transformers==5.1.1",
    "tomli==2.2.1",
]
